# ridge

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF-tmux-phase2.md  LICENSE  README.md  bash.exe.stackdump  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  ridge.theme  stdout.txt  svelte.config.js  technical_architecture.md  tsconfig.json  verify_norm_temp.js  vite.config.js  vite.mobile.config.js  vite.remote.config.js  vitest.config.ts  wdio.conf.ts  wdio.frame.conf.ts  wdio.perf.conf.ts  wdio.reset.conf.ts  wind.code-workspace
.baseline/: wind-baseline-check.txt
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-pages.yml  release.yml
.kiro/steering/: tech.md
.opencode/: opencode.json  ralph-loop.local.md  ralph-loop.state.md
.opencode/plans/: 2026-06-15-resize-tui-redraw-fix.md  remote-fixes.md
coverage/: clover.xml  coverage-final.json  index.html  paneTree.ts.html
docs/: 2026-06-15-remote-deploy-and-verification-todos.md  2026-06-25-desktop-web-remote-sw-early-registration.md  AGENT_TEAMS_TEAMMATES.md  Agent-Team协同使用手册.md  CDP_TESTING.md  NEXT_LOOP_PLAN.md  PANE_GIT_PILL_VERIFY.md  README_CN.md  ROADMAP.md  TERMINAL_SCROLLBACK.md  mcp-integration.md  release-signing.md  release-todo.md  ridge-cli-usage.md  ridge-vps-agent.md  teammate-user-guide.md  v0.0.5-AGENT-AWARENESS.md  wip-1.34-history-overlay-part2.patch  wip-1.34-history-overlay.patch  微信小程序控制桌面应用 - Google Gemini.html
docs/contracts/: ridge-cloud-protocol.md
docs/plans/: d-gm-10-e2ee-key-binding-design.md  d11-workspace-graph-pane-decoupling-design.md  file-editor-review.md  local-cloud-e2e-setup.md  manual-qa-report.md  mobile-remote-resize-fix.md  orchestration-log.md  public-remote-e2e-contract.md  public-remote-verification-checklist.md  rdg-interactive-tui-and-lan.md  remote-cloud-security-audit-2026-06-07.md  remote-controller-ux-review.md  remote-session-handoff-2026-06-07.md  s1-migration-ledger.md  s3-finish-status.md  s8-shim-audit.md  session-handoff-2026-06-07-cloud-e2e-and-lan-verify.md  terminal-resize-input-review.md  unified-remote-architecture-handoff-final.md  unified-remote-architecture.md  unified-remote-gap-analysis.md  wave1-gap-report.md  wave23-gap-report.md
docs/term-rebuild/: BUGFIX.md  INTEGRATION.md  INTEGRATION_R2_4.md  OVERVIEW.md  PARTIAL_REDRAW_PROTOCOL.md  PROBLEM_COVERAGE.md  REPLACE_AND_FIX_PLAN.md  REPRO_alt_resize.md  REPRO_dim_residue.md  REPRO_primary_resize.md  TASKS.md
docs/微信小程序控制桌面应用 - Google Gemini_files/: bscframe.html  gtm.js.下载  js  m=_b  rs=AA2YrTv8wYybEpvUEjt3SHn7JfTjQMRKXw
scripts/: build-desktop-web.mjs  build-flag-font.mjs  build-ridge.mjs  build-validate.mjs  cdp-cloud-seed.mjs  cdp-dirchildren-probe.mjs  cdp-enable-remote.mjs  cdp-get-totp.mjs  cdp-lan-probe.mjs  cdp-pane-graph.mjs  cdp-port.mjs  cdp-pty-parsers.mjs  cdp-reap-test.mjs  cdp-smoke.mjs  cdp-teammate-e2e.mjs  cdp-teammate-mcp-e2e.mjs  cdp-term-input.mjs  cdp-wait-and-enable.mjs  copy-teammate-shim.mjs  dev-cli.ps1  dev-cli.sh  dev-wind.sh  dev-with-cloud.sh  ensure-teammate-shim.mjs  gen-remote-icons.mjs  perf-bench.ps1  perf-compare.ps1  perf-frame-compare.ps1  post-build-rename.mjs  prune-stale-fonts.mjs  remote-cleanup.mjs  remote-createws-test.mjs  remote-gc-e2e.mjs  remote-leak-trace.mjs  remote-verify-fix.mjs  ridge-tmux-log-setup.ps1  start-all.sh  start-remote-dev.mjs  start-vite-dev.mjs  sync-cloud-desktop-app.mjs  (+9 more)
scripts/perf-runs/: p4-trace-analysis-2026-05-25T13-07.md
site/: 404.html  RECORDING.md  docs.html  index.html  releases.html
site/Ridge Terminal/: Ridge Homepage.html  app.jsx  sections.jsx  workbench.jsx
site/scripts/: main.js
site/styles/: main.css
src/: app.css  app.html  hooks.server.ts  service-worker.ts
src-tauri/: Cargo.toml  bash.exe.stackdump  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis-plugins/: LICENSE.txt  README.md
src-tauri/src/: deep_root.rs  lib.rs  main.rs  state.rs  tray.rs  types.rs
src-tauri/src/commands/: clipboard_files.rs  clipboard_image.rs  cloud_http.rs  cloud_pane.rs  fs_watch.rs  git.rs  mod.rs  pane.rs  process.rs  project.rs  remote.rs  ridge_file.rs  settings.rs  teammate.rs  terminal.rs  theme.rs  watch.rs  wind_file.rs  workspace.rs
src-tauri/src/db/: mod.rs  projects.rs
src-tauri/src/engine/: cwd.rs  mod.rs  pane_tree.rs  parser.rs  pty.rs  title.rs
src-tauri/src/fs/: mod.rs  search.rs  tree.rs
src-tauri/src/hosts/: mod.rs
src-tauri/src/lsp/: mod.rs
src-tauri/src/remote/: auth.rs  core_bridge.rs  mdns.rs  mobile_page.html  mod.rs  server.rs  tls.rs
src-tauri/src/teammate/: circuit.rs  endpoint.rs  hitl.rs  layout_event.rs  locks.rs  mod.rs  native.rs  profiles.rs  server.rs  stream.rs
src-tauri/src/utils/: cwd.rs  error.rs  logging.rs  mod.rs  pane_id.rs  pty_log.rs
src-tauri/wix/: path-env.wxs
src/lib/: devIssue.ts  types.ts
src/mobile/: AuthScreen.svelte  BottomTabBar.svelte  IdeScreen.svelte  MainApp.svelte  TerminalScreen.svelte  index.html
src/remote/: App.svelte  AuthScreen.svelte  BottomTabBar.svelte  CertTrustGuide.svelte  CloudAuthScreen.svelte  MainApp.svelte  TopBar.svelte  index.html  main.ts
src/routes/: +layout.svelte  +page.svelte
static/docs/: mcp-integration.md
static/mobile/: index.html
static/remote/: index.html
tests/e2e/: fileEditor.spec.ts  smoke.spec.ts
tests/e2e-perf/: frame-time-attribution.spec.ts  frame-time.spec.ts  stress.spec.ts
tests/e2e-shell/: README.md  helpers.ts  history-overlay-perf.spec.ts  history-popup-arrowright.spec.ts  history-popup-tui-gate.spec.ts  history-popup.spec.ts  idle-loop.spec.ts  ime-anchor.spec.ts  input-echo.spec.ts  parserBackend.rust.spec.ts  parserBackend.switch.spec.ts  parserBackend.wasm.spec.ts  resize-scissor.spec.ts  resize.spec.ts  selection-tui-refresh.spec.ts  theme-injection.spec.ts  theme-rotation.spec.ts  worker-path-resize.spec.ts  worker-path-shadow.spec.ts
tests/e2e-utils/: reset-parser-backend.spec.ts
todos/: next-release.md
(+362 files in other folders)
