[package]
name = "ridge"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ridge"

[features]
# 对于自定义构建，启用 "devtools" 这个特性
devtools = ["tauri/devtools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
walkdir = "2"
regex = "1"
ignore = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
once_cell = "1"
git2 = "0.19"
sysinfo = "0.31"
backtrace = "0.3"
base64 = "0.22"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

[[bin]]
name = "tmux"
path = "src/bin/tmux.rs"

