[package]
name = "ridge"
version = "0.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "ridge"

[features]
# 对于自定义构建，启用 "devtools" 这个特性
devtools = ["tauri/devtools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# `tray-icon`：Deep Root Mode（§8）的系统托盘所需（tauri::tray::TrayIconBuilder）。
# 托盘图标复用 `app.default_window_icon()`（已是解码后的 RGBA `Image`），故无需
# 额外的 `image-ico` 解码特性。
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.7.1"
# Deep Root Mode（§8.1）：进入深根时发原生系统通知（Rust 端 NotificationExt）。
tauri-plugin-notification = "2.3.3"
# 公网登录授权（契约 §1/§2.3）：注册自定义 scheme `ridge://`，网页授权批准后
# `ridge://auth/focus` 把桌面端拉回前台并触发一次轮询。URI 仅作信号，绝不携带 token。
tauri-plugin-deep-link = "2.4.9"
# 配合 deep-link：Windows 上第二个实例（由浏览器唤起 `ridge://`）把 argv 转交首个
# 实例并聚焦，避免重复开窗（single-instance 必须在 builder 链最前注册）。
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-util"] }
parking_lot = "0.12"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
axum = { version = "0.7", features = ["ws"] }
# Remote-control HTTPS. Browsers only expose WebGPU (`navigator.gpu`) in a
# "secure context" (https/wss/localhost), so reaching the GPU path from a
# phone/desktop browser over the LAN requires the remote server to serve
# TLS. We terminate TLS via axum-server's rustls integration and, on first
# run, auto-generate a local root CA + a CA-signed leaf cert (rcgen) so the
# CA can be installed/trusted once per device to silence the browser warning
# (see remote/tls.rs). Crypto backend is `ring`, NOT rustls 0.23's default
# `aws-lc-rs`: the crates.io `ring` release bundles pregenerated assembly, so
# Windows MSVC builds need no nasm/cmake (aws-lc-rs would).
# `tls-rustls-no-provider` lets us install the ring provider ourselves.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "crypto"] }
# Certificate validity windows for the remote TLS CA/leaf (see remote/tls.rs).
time = { version = "0.3", default-features = false, features = ["std"] }
futures = "0.3"
sha2 = "0.10"
# SECURITY (audit C2): OS CSPRNG for the remote TOTP secret seed + session
# tokens. Replaces the former non-cryptographic `SimpleRng` xorshift (seeded
# from `nanos ^ pid`, low entropy → predictable secret/token). `getrandom 0.2`
# is already in the dependency tree transitively (via ring/rustls); declaring
# it directly pins the same major and pulls in no new transitive crates.
getrandom = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
walkdir = "2"
regex = "1"
ignore = "0.4"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"
once_cell = "1"
git2 = "0.19"
sysinfo = "0.31"
backtrace = "0.3"
base64 = "0.22"
# 剪贴板图片粘贴（§clipboard-image）：把 arboard 读到的 RGBA8 编码成 PNG 落盘成临时文件，
# 再把路径作为 bracketed-paste 文本喂给终端里的 TUI（Claude Code 等）。只需编码，故用轻量的
# `png` crate 而非重量级的 `image`。
png = "0.17"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"

# P3.1 (2026-05-20): pull the ridge-term parser + grid + modes into
# the Tauri binary. `default-features = false` skips the `webgpu`
# default (whose deps are gated `optional = true` in ridge-term's
# Cargo.toml + `cfg(target_arch = "wasm32")` blocks). The native
# build only ends up with vte / unicode-segmentation / serde / the
# wasm-bindgen no-op stubs, so no wgpu / web-sys / bytemuck creeps
# into the desktop binary.
#
# Not consumed yet — P3.3 wires the per-pane parser task in
# src-tauri/src/engine/parser.rs. Adding the dep now (zero-import)
# so a fresh `cargo build` confirms the dependency graph resolves
# without surprise rebuilds when P3.3 lands.
ridge-term = { path = "../packages/ridge-term", default-features = false }

# S1 (2026-06-03): the runtime-agnostic command + domain core. The desktop
# `#[tauri::command]` handlers in the vertical slice (settings + theme) became
# thin wrappers that construct a `ridge_core::Ctx` and call
# `ridge_core::dispatch`. Zero Tauri dependency lives in ridge-core, so this
# dep does not pull anything new into the desktop binary's graph beyond
# serde/serde_json/tokio/thiserror/tracing (all already present).
ridge-core = { path = "../packages/ridge-core" }

# S-decouple: the headless tmux session engine, extracted out of
# `teammate/native.rs` into a standalone Tauri-free crate so the SAME engine
# the desktop uses can run in the headless `ridge-cli` host. The desktop keeps
# its `crate::teammate::native::*` paths via a thin `pub use ridge_tmux::*;`
# re-export. Pure deps only (portable-pty + ridge-term Terminal), no new Tauri.
ridge-tmux = { path = "../packages/ridge-tmux", features = ["http"] }
# Shared remote-control server infrastructure (TLS + HTTP/WS server lifecycle)
ridge-remote = { path = "../packages/ridge-remote" }

# P3.5 (2026-05-20): same postcard codec the ridge-term crate uses for
# the GridDelta wire format. The native PaneParser (`engine::parser`)
# encodes frames to Vec<u8>, emits via Tauri events; the wasm consumer
# decodes the same bytes back into DeltaFrame in JsTerminal. Keeping
# the dep version aligned (both at "1") guarantees the same postcard
# encoding rules — protocol stability is enforced by DeltaFrame::version,
# not by source-level postcard compatibility.
postcard = { version = "1", features = ["alloc"] }

# Remote Control (主线一, 2026-05-24): LAN-First remote access.
# TOTP for one-time password authentication (RFC 6238).
# Using manual implementation to avoid new dep downloads.
# mDNS uses raw UDP multicast — no extra crate needed.
# WebSocket is built into axum 0.7 — no extra dep needed.

[target.'cfg(windows)'.dependencies]
# 剪贴板「复制图片文件」(CF_HDROP) 读取：arboard 只读位图/文本、读不到文件列表；
# clipboard-win 已是 arboard 的传递依赖（同为 5.x），加为 Windows-only 直接依赖不引入新传递依赖。
clipboard-win = "5"

[[bin]]
name = "tmux"
path = "src/bin/tmux.rs"

[[bin]]
name = "remote-server"
path = "src/bin/remote-server.rs"

